--- a/src/components/BlogPost/BlogPost.css
+++ b/src/components/BlogPost/BlogPost.css
@@ -59,4 +59,52 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+}
+
+@media (max-width: 700px) {
+  .blog-post-featured {
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin: 24px 0;
+  }
+  .post-content h1 {
+    font-size: 1.5rem;
+  }
+  .post-content p {
+    font-size: 1rem;
+  }
+  .author-avatar {
+    width: 32px;
+    height: 32px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .nav-menu-mobile .dropdown-menu,
+  .nav-menu-mobile .dropdown-menu.open {
+    position: static;
+    box-shadow: none;
+    border: none;
+    background: #222b3a;
+    margin: 0 0 0 0;
+    width: 100%;
+    padding: 8px 0 8px 24px;
+    height: auto;
+    display: block;
+    max-height: 200px;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
+  }
+  .nav-menu-mobile .dropdown-link {
+    color: #fff;
+    padding: 10px 0;
+    width: 100%;
+    display: block;
+  }
+  .nav-menu-mobile {
+    height: auto;
+  }
+  .navbar-hamburger.hide-when-open {
+    display: none !important;
+  }
 } 
