--- a/src/components/ExpertsSection/ExpertsSection.css
+++ b/src/components/ExpertsSection/ExpertsSection.css
@@ -1,4 +1,4 @@
-.experts-section {
+npm.experts-section {
     padding: 80px 0;
     background-color: #fff;
 }
@@ -108,4 +108,44 @@
     border-radius: 50%;
     height: 250px;
     width: 250px;
-} 
+}
+
+@media (max-width: 900px) {
+  .experts-content {
+    flex-direction: column;
+    gap: 32px;
+    align-items: stretch;
+  }
+  .stats-column, .images-column {
+    width: 100%;
+    flex: unset;
+  }
+  .image-collage {
+    height: 300px;
+    min-height: 200px;
+  }
+  .collage-img-1, .collage-img-2, .collage-img-3 {
+    position: static;
+    width: 100%;
+    height: auto;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+  }
+  .collage-img-3 {
+    border-radius: 16px;
+    height: auto;
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .experts-section {
+    padding: 32px 0;
+  }
+  .section-title {
+    font-size: 1.5rem;
+  }
+  .image-collage {
+    height: 180px;
+  }
+}
